# always-on-claude

./: CHANGELOG.md  CLAUDE.md  README.md  SETUP_PLAN.md  arch-lenovo-setup.md  happier-migration.md  happier-setup.md  plugin.json
.claude-plugin/: marketplace.json  plugin.json
.scratch/: arch-lenovo-setup.md  thinkpad_homeserver.md
examples/: CLAUDE.md.example
happier-tui/: .gitignore  README.md  pyproject.toml
happier-tui/src/happier_tui/: app.py  chat_screen.py  client.py  daemon_client.py  sync.py
happier-tui/tests/: test_client.py  test_sync.py
hooks/: sync-session-end.sh  sync-session-start.sh
skills/always-on-setup/: SKILL.md
skills/always-on-setup/references/: partition-fix.md  setup-scripts.md  troubleshooting.md
skills/conversation-transfer/: SKILL.md
skills/happier-upgrade/: SKILL.md
