[project]
name = "happier-tui"
version = "0.1.0"
description = "Terminal UI for managing Happier sessions"
requires-python = ">=3.12"
dependencies = [
    "textual>=8.1.1",
    "httpx>=0.28.0",
    "python-socketio[asyncio-client]>=5.16.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
happier-tui = "happier_tui.app:main"
